Solved edit/delete btn visiblity issue

--- a/public/globals.css
+++ b/public/globals.css
@@ -11,9 +11,16 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .poppins-font {
   --font-main: 'Poppins', Arial, Helvetica, sans-serif;
 }
+
+/* ::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+} */
+
 /* :root {
   --background: #ffffff;
   --foreground: #171717;
